Another round of collection test refactoring (#1003)