@@ -52,8 +52,6 @@
 
 package io.anserini.collection;
 
-import org.apache.tools.ant.filters.StringInputStream;
-
 import java.io.DataInput;
 import java.io.DataInputStream;
 import java.io.DataOutput;
@@ -63,9 +61,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Locale;
 import java.util.Map;
@@ -81,16 +77,12 @@ public class ClueWeb09Collection extends DocumentCollection<ClueWeb09Collection.
 
   public ClueWeb09Collection(Path path) {
     this.path = path;
-    this.allowedFileSuffix = new HashSet<>(Arrays.asList(".warc.gz"));
+    this.allowedFileSuffix = Set.of(".warc.gz");
   }
 
   @Override
   public FileSegment<ClueWeb09Collection.Document> createFileSegment(Path p) throws IOException {
     return new Segment(p);
-  }
-
-  public FileSegment<ClueWeb09Collection.Document> createFileSegment(String raw) {
-    return new Segment(raw);
   }
 
   /**
@@ -108,13 +100,7 @@ public class ClueWeb09Collection extends DocumentCollection<ClueWeb09Collection.
 
     protected Segment(Path path) throws IOException {
       super(path);
-      this.stream = new DataInputStream(
-              new GZIPInputStream(Files.newInputStream(path, StandardOpenOption.READ)));
-    }
-
-    protected Segment(String raw) {
-      super(null);
-      this.stream = new DataInputStream(new StringInputStream(raw));
+      this.stream = new DataInputStream(new GZIPInputStream(Files.newInputStream(path, StandardOpenOption.READ)));
     }
 
     @Override
@@ -123,11 +109,15 @@ public class ClueWeb09Collection extends DocumentCollection<ClueWeb09Collection.
     }
 
     @Override
-    public void close() throws IOException {
-      if (stream != null) {
-        stream.close();
+    public void close() {
+      try {
+        if (stream != null) {
+          stream.close();
+        }
+        super.close();
+      } catch (IOException e) {
+        // There's really nothing to be done, so just silently eat the exception.
       }
-      super.close();
     }
 
     /**
